--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 </head>
 
 <body>
-    <div class="cont">
-        <img class="logo" src="Logo.png">
+    <div class="cont"><div class="topbox">
+        <img class="logo" src="Logo - Copy.jpg">
         <nav>
             <div class="links">
                 <a href="index.html">Home</a>
                 <a href="contact.html">Contact</a>
                 <a href="shop.html">Shop</a>
-        </nav>
+        </nav></div>
         <div class="box"><img class="top" src="teeBlack.jpg"></div>
     </div>
 </body>
