--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 </head>
 
 <body>
-    <div class="cont"><div class="topbox">
-        <img class="logo" src="Logo - Copy.jpg">
-        <nav>
-            <div class="links">
-                <a href="index.html">Home</a>
-                <a href="contact.html">Contact</a>
-                <a href="shop.html">Shop</a>
-        </nav></div>
+    <div class="cont">
+        <div class="topbox">
+                <img class="logo" src="Logo - Copy.jpg">
+                <nav>
+                    <div class="links">
+                        <a href="index.html">Home</a>
+                        <a href="contact.html">Contact</a>
+                        <a href="shop.html">Shop</a>
+                </nav>
+            </div>
         <div class="box"><img class="top" src="teeBlack.jpg"></div>
     </div>
 </body>
