--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 <body>
     <div class="cont">
         <div class="topbox">
-                <img class="logo" src="Logo - Copy.jpg">
-                <nav>
-                    <div class="links">
-                        <a href="index.html">Home</a>
-                        <a href="contact.html">Contact</a>
-                        <a href="shop.html">Shop</a>
+            <img class="logo" src="Logo - Copy.jpg">
+            <div class="link">
+            <nav>
+                <a href="index.html">Home</a>
+                    <a href="contact.html">Contact</a>
+                    <a href="shop.html">Shop</a>
                 </nav>
             </div>
+        </div>
         <div class="box"><img class="top" src="teeBlack.jpg"></div>
     </div>
 </body>
