--- a/shop.html
+++ b/shop.html
@@ -8,15 +8,26 @@
 <body>
     <div class="cont">
         <div class="topbox">
-            <img class="logo" src="Logo - Copy.jpg">
+            <img class="logo" src="Image/Logo - Copy.jpg">
             <div class="link">
-            <nav>
-                <a href="index.html">Home</a>
+                <nav>
+                    <a href="index.html">Home</a>
                     <a href="contact.html">Contact</a>
                     <a href="shop.html">Shop</a>
                 </nav>
             </div>
         </div>
-        <div class="box"><img class="top" src="teeBlack.jpg"></div>
+        <div class="cal">
+            <h1>stuff</h1>
+            <script>
+                //cal goes here
+            </script>
+        </div>
+        <div class="box1">
+            <img class="top" src="Image/teeBlack.jpg">
+            <img class="top" src="Image/teeBlack.jpg">
+            <img class="top" src="Image/teeBlack.jpg">
+
+        </div>
     </div>
 </body>
