--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 <body>
     <div class="cont">
         <div class="topbox">
-            <img class="logo" src="Logo - Copy.jpg">
+            <img class="logo" src="Image/Logo - Copy.jpg">
             <div class="link">
-            <nav>
-                <a href="index.html">Home</a>
+                <nav>
+                    <a href="index.html">Home</a>
                     <a href="contact.html">Contact</a>
                     <a href="shop.html">Shop</a>
                 </nav>
             </div>
         </div>
-        <div class="box"><img class="top" src="teeBlack.jpg"></div>
+        <div class="box"><img class="top" src="Image/teeBlack.jpg">
+        <h1>Words</h1>
+    </div>
     </div>
 </body>
